# metahuman

./: .gitignore  AmazonPollyMetaHuman.uproject
Config/: DefaultEditorSettings.ini  DefaultEngine.ini
Content/AmazonPollyMetaHuman/Ada/: BP_Ada.uasset
Content/AmazonPollyMetaHuman/Scene/: BP_UIWidget.uasset  MetaHumanScene.umap
Content/MetaHumans/Animation/: Speech_AnimBP.uasset
Content/MetaHumans/Common/Common/: MetaHuman_ControlRig.uasset
MetahumanServer/: pyproject.toml  relay_server.py
MetahumanServer/utils/: GoogleSpeechAPI.py  openai_util.py
RelayServer/: README.md  audio_client.py  relay_server.py
RelayServer/utils/: GoogleSpeechAPI.py  openai_utils.py  voice_recorder.py
